--- a/call.html
+++ b/call.html
@@ -7,10 +7,7 @@
     </head>
     <body>
         <script>
-            let foo = {
-                value: 1,
-                values: 2,
-            };
+            let foo = {value: 1};
             function bar() {
                 console.log(this.value);
             }
@@ -24,7 +21,7 @@
                 delete target.fn;
                 return result;
             }
-            bar.myCall(foo); // 1
+            bar.myCall(foo,1,2,2); // 1
         </script>
     </body>
 </html>
