--- a/bind.html
+++ b/bind.html
@@ -27,10 +27,8 @@
 
             }
 
-            const aa = test.myBind(obj);
-            aa([1,2,3]);
-            // myBind.bind(obj)(112312,12321);
-
+            const bindThis = test.myBind(obj);
+            bindThis([1,2,3]);
         </script>
     </body>
 </html>
